--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,4 +6,7 @@ jobs:
   steps:
    - run: node --version
    - uses: actions/checkout@v3
+   - run: ls -a
+   - run: cd ..
+   - run: ls -a
    - run: node app.js
