--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,8 +5,8 @@ jobs:
   container: node:16
   steps:
    - run: node --version
+   - run: npm --version
    - uses: actions/checkout@v3
    - run: ls -a
-   - run: cd ..
-   - run: ls -a
+   - run: npm install
    - run: node app.js
